welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: not found: value vuBiscuit
 if (vuBiscuit()==true) {
     ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
 	return}
        ^Program:12: error: not found: value vuBiscuit
 else if (vuBiscuit()==false) {
          ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
 else if (vuBiscuit()==false) {
      ^